--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -149,7 +149,7 @@
           "use_tpi_central_config": "Check to use the central TPI configuration. Uncheck to use a specific TPI configuration for this VTherm",
           "minimal_activation_delay": "Delay in seconds under which the equipment will not be activated",
           "minimal_deactivation_delay": "Delay in seconds under which the equipment will be kept active",
-          "auto_tpi_mode": "Check to enable automatic learning of TPI coefficients"
+          "auto_tpi_mode": "TPI learning session are started manually, read the doc first."
         }
       },
       "presets": {
@@ -522,7 +522,8 @@
           "tpi_threshold_high": "Threshold in ° above which the TPI algorithm will be off. 0 means no threshold",
           "use_tpi_central_config": "Check to use the central TPI configuration. Uncheck to use a specific TPI configuration for this VTherm",
           "minimal_activation_delay": "Delay in seconds under which the equipment will not be activated",
-          "minimal_deactivation_delay": "Delay in seconds under which the equipment will be kept active"
+          "minimal_deactivation_delay": "Delay in seconds under which the equipment will be kept active",
+          "auto_tpi_mode": "TPI learning session are started manually, read the doc first."
         }
       },
       "presets": {
